--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -38,6 +38,10 @@ li {
   list-style: none;
 }
 
+#root {
+  height: 100%;
+}
+
 .Header {
   width: 100%;
   height: auto;
@@ -45,9 +49,12 @@ li {
 }
 
 .Container {
-  width: 1425px;
+  width: 1600px;
   margin: 0 auto;
   background-color: black;
+  padding-left: 50px;
+  padding-right: 50px;
+  height: 100%;
 }
 
 .Header .Container .Logo {
@@ -91,7 +98,13 @@ li {
 }
 
 .Container .DataBank {
+  width: 100%;
   padding-top: 100px;
+  display: flex;
+}
+
+.Container .DataBank .FilterDataBank {
+  width: 20%;
 }
 
 .Container .DataBank .FilterDataBank ul {
@@ -100,10 +113,64 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
 }
 
 .Container .DataBank .FilterDataBank ul li {
   color: #B5B7B7;
   text-transform: uppercase;
   font-weight: 500;
+  cursor: pointer;
+  width: 100%;
+}
+
+.Container .DataBank .FilterDataBank ul li:hover {
+  transition: 0.5s;
+  color: white;
+  font-weight: 500;
+}
+
+.Container .DataBank .Characters {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.Container .DataBank .Characters .Hero {
+  width: 162px;
+  height: 237px;
+  color: white;
+  border-radius: 13px;
+  background-color: #202124;
+  cursor: pointer;
+}
+
+.Container .DataBank .Characters .Hero:hover {
+  transition: 0.5s;
+  opacity: 0.8;
+  transform: scale(1.05);
+}
+
+.Container .DataBank .Characters .Hero img {
+  width: 100%;
+  border-radius: 13px;
+}
+
+.Container .DataBank .Characters .Hero span {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.Container .DataBank .Characters .Hero .CardBorder{
+  height: 1px;
+  width: 30%;
+  border-bottom: 6px solid gray;
+  border-radius: 13px;
+  margin-left: 3px;
+  margin-top: 10px;
+  margin-bottom: 15px;
 }
