--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -124,6 +124,19 @@ li {
   width: 100%;
 }
 
+.Container .DataBank .FilterDataBank ul li span {
+  font-size: 18px;
+  margin-left: 7px;
+}
+
+.Container .DataBank .FilterDataBank ul li span::after {
+  content: " ) ";
+}
+
+.Container .DataBank .FilterDataBank ul li span::before {
+  content: " ( ";
+}
+
 .Container .DataBank .FilterDataBank ul li:hover {
   transition: 0.5s;
   color: white;
@@ -173,4 +186,73 @@ li {
   margin-left: 3px;
   margin-top: 10px;
   margin-bottom: 15px;
+}
+
+.Container .HeroDetails {
+  color: white;
+  width: 100%;
+  padding-top: 100px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: auto;
+}
+
+.Container .HeroDetails .BrieflyAboutHero {
+  width: 100%;
+  height: 500px;
+  border-radius: 13px;
+  background-color: #1d1e1f;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Container .HeroDetails .BrieflyAboutHero .HeroImageDetails {
+  width: 60%;
+  border-radius: 13px;
+  height: 100%;
+}
+
+.Container .Loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.Container .Loading img {
+  width: 80px;
+  height: 80px;
+  animation: loading 0.3s linear;
+}
+
+@keyframes loading {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360);
+  }
+}
+
+.Container .HeroDetails .BrieflyAboutHero .Description {
+  width: 40%;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.Container .HeroDetails .BrieflyAboutHero .Description h2 {
+  color: white;
+  font-size: 24px;
+  margin-bottom: 30px;
+}
+
+.Container .HeroDetails .BrieflyAboutHero .Description p {
+  line-height: 35px;
+  color: #B5B7B7;
+}
+
+.Container .HeroDetails .MoreAboutTheCharacter {
+  width: 100%;
+  padding-top: 50px;
 }
