--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -6,13 +6,17 @@
 
 html {
   width: 100%;
-  height: 100%;
+  
 }
 
 body {
   min-width: 100%;
   min-height: 100%;
   font-family: 'Montserrat', sans-serif;
+  background: url(https://damion.club/uploads/posts/2022-01/1641930245_61-damion-club-p-foni-black-star-67.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 a {
@@ -23,14 +27,10 @@ li {
   list-style: none;
 }
 
-#root {
-  width: 100%;
-  height: 100%;
-  background: url(https://damion.club/uploads/posts/2022-01/1641930245_61-damion-club-p-foni-black-star-67.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
+
+/* #root {
+  background-color: red;
+} */
 
 .Header {
   width: 100%;
@@ -44,7 +44,6 @@ li {
   background-color: black;
   padding-left: 50px;
   padding-right: 50px;
-  height: 100%;
 }
 
 .Header .Container .Logo {
@@ -384,9 +383,7 @@ li {
   border-radius: 13px;
 }
 
-.Container .HistoryOfHero .Part {
- 
-}
+
 
 .Container .HistoryOfHero .Part h3 {
   font-size: 46px;
