--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -260,7 +260,17 @@ li {
 .Container .HeroDetails .BrieflyAboutHero .Description {
   width: 40%;
   padding-top: 20px;
+  position: relative;
   padding-left: 20px;
+}
+
+.Container .HeroDetails .BrieflyAboutHero .Description .AddToFavButton {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
 }
 
 .Container .HeroDetails .BrieflyAboutHero .Description h2 {
@@ -535,4 +545,8 @@ li {
 .FilterFilms .SelectedCategory {
   color: white;
   font-weight: 500;
+}
+
+.FavouriteCharacters {
+  color: white;
 }
