--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -273,6 +273,31 @@ li {
   cursor: pointer;
 }
 
+.Container .HeroDetails .BrieflyAboutHero .Description .AddToFavButton:hover {
+  transition: 0.5s;
+  transform: scale(1.3);
+}
+
+.Container .HeroDetails .BrieflyAboutHero .Description .AddedInFavourite {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  animation: added 0.5s linear;
+}
+
+@keyframes added {
+  from {
+    top: -10px;
+    opacity: 0;
+  }
+  to {
+    top: 10px;
+    opacity: 1;
+  }
+}
+
 .Container .HeroDetails .BrieflyAboutHero .Description h2 {
   color: white;
   font-size: 24px;
@@ -549,6 +574,7 @@ li {
 
 .FavouriteCharacters {
   width: 100%;
+  padding-top: 100px;
 }
 
 .FavouriteCharacters .HeroesCategory {
@@ -560,3 +586,4 @@ li {
 .FavouriteCharacters .FavouriteHero {
   color: white;
 }
+
