React app development

--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -170,6 +170,7 @@ li {
   height: 100%;
   display: flex;
   justify-content: space-evenly;
+  flex-flow: wrap;
 }
 
 .Container .DataBank .Characters .Hero {
