--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -658,3 +658,49 @@ li {
 .Series .Serial .InfoAboutSeries h3 {
   font-size: 18px;
 }
+
+.MoreSpecial {
+  color: white;
+  padding-top: 50px;
+}
+
+.MoreSpecial h2 {
+  width: 100%;
+  font-size: 44px;
+  margin-bottom: 20px;
+}
+
+.MoreSpecial p {
+  width: 20%;
+  display: flex;
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.MoreSpecial p span {
+  margin-right: 15px;
+}
+
+.MoreSpecial .OtherInfoAboutSeries {
+  width: 100%;
+  padding-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.MoreSpecial img {
+  max-width: 320px;
+}
+
+.MoreSpecial .OtherInfoAboutSeries p {
+  color: white;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  line-height: 35px;
+}
+
+.MoreSpecial .OtherInfoAboutSeries p span {
+  font-weight: 500;
+}
