React app development

--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -864,3 +864,7 @@ li {
 .Header .AuthTools img {
   margin-right: 20px;
 }
+
+.Header .Container .NavLinks .BorderBottomNavLink {
+  color: red;
+}
