React app development

--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -87,11 +87,12 @@ li {
   font-weight: 500;
   text-transform: uppercase;
   width: 15%;
+  padding-bottom: 15px;
 }
 
 .Header .Container .NavLinks a:hover {
   transition: 1s;
-  color: red;
+  color: white;
 }
 
 .Header .Container {
@@ -866,5 +867,21 @@ li {
 }
 
 .Header .Container .NavLinks .BorderBottomNavLink {
-  color: red;
+  animation: neonAnim 2s alternate-reverse infinite;
+  font-weight: bold;
+}
+
+@keyframes neonAnim {
+  from {
+      text-shadow:
+        0 0 10px rgba(255, 253, 213, .7),
+        0 0 40px rgba(255, 253, 213, .7),
+        0 0 100px rgba(255, 253, 213, .7);
+    }
+    to {
+      text-shadow:
+        0 0 5px rgba(255, 253, 213, .7),
+        0 0 20px rgba(255, 253, 213, .7),
+        0 0 60px rgba(255, 253, 213, .7);
+    }
 }
