--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -1053,12 +1053,19 @@ li {
   padding-top: 100px;
 }
 
+ .NewGamesAndAppsTitle {
+  font-size: 28px;
+  color: white;
+  padding-top: 30px;
+}
+
 .NewGames .NewGame {
   height: 534px;
-  width: 25%;
+  width: 26%;
   border-radius: 13px;
   background-color: #202124;
   cursor: pointer;
+  margin-bottom: 70px;
 }
 
 
@@ -1120,6 +1127,8 @@ li {
 .MoreAboutNewGame ul li {
   color: #B5B7B7;
   line-height: 35px;
+  width: 100%;
+  text-align: center;
 }
 
 
