--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -1057,6 +1057,8 @@ li {
   font-size: 28px;
   color: white;
   padding-top: 30px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #B5B7B7;
 }
 
 .NewGames .NewGame {
@@ -1157,4 +1159,43 @@ li {
   text-align: center;
   padding-top: 20px;
   font-size: 18px;
+}
+
+.ConsoleAndPcGames {
+  width: 100%;
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-between;
+  padding-top: 50px;
+}
+
+.ConsoleAndPcGames .ConsoleAndPcGame {
+  height: 534px;
+  width: 26%;
+  border-radius: 13px;
+  background-color: #202124;
+  cursor: pointer;
+  margin-bottom: 70px;
+  cursor: pointer;
+  border-top-right-radius: 13px;
+  border-top-left-radius: 13px;
+}
+
+
+.ConsoleAndPcGames .ConsoleAndPcGame:hover {
+  transition: 0.5s;
+  transform: scale(1.05);
+}
+
+.ConsoleAndPcGames .ConsoleAndPcGame img {
+  width: 100%;
+  border-top-right-radius: 13px;
+  border-top-left-radius: 13px;
+}
+
+.ConsoleAndPcGames .ConsoleAndPcGame h3 {
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding-top: 40px;
 }
