--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -1266,7 +1266,8 @@ li {
 
 .News .NewsFilter .NewsTitle {
   color: #B5B7B7;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 500;
   cursor: pointer;
 }
 
@@ -1274,6 +1275,8 @@ li {
   transition: 0.5s;
   color: white;
 }
+
+
 
 .News .NewsFilter .ClosedFilterNews {
   background-color: #48494a;
@@ -1304,4 +1307,81 @@ li {
   color: white;
   margin: 0 auto;
   padding-top: 150px;
+}
+
+
+.News .CurrentPost h2 {
+  width: 100%;
+  text-align: center;
+  font-size: 34px;
+  padding-bottom: 50px;
+}
+
+.News .CurrentPost .AboutPost {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.News .CurrentPost .AboutPost .MainImagePost {
+  width: 100%;
+  animation: imgMain 0.8s linear;
+}
+
+@keyframes imgMain {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.News .CurrentPost .AboutPost .MoreAboutPostNews {
+  padding-top: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  animation: mapn 0.8s linear;
+}
+
+@keyframes mapn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.News .CurrentPost .AboutPost .MoreAboutPostNews p {
+  line-height: 35px;
+  font-size: 18px;
+  font-weight: 500;
+  padding-top: 50px;
+  text-align: center;
+}
+
+.News .CurrentPost .AboutPost .MoreAboutPostNews h4 {
+  width: 100%;
+  padding-top: 20px;
+  font-size: 20px;
+  text-align: center;
+}
+
+
+.News .CurrentPost .AboutPost .MoreAboutPostNews a {
+  color: purple;
+  line-height: 30px;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.News .CurrentPost .AboutPost .MoreAboutPostNews a:hover {
+  transition: 0.5s;
+  color: blue;
 }
