React app devleopment

--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -623,6 +623,24 @@ li {
 
 }
 
+.FavouriteCharacters .ToolsFavourite .ClearFavouriteButton {
+  width: 15%;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  background-color: #fade4b;
+  border-radius: 6px;
+  color: black;
+  font-weight: 500;
+  font-size: 16px;
+  transition: 1s;
+}
+
+.FavouriteCharacters .ToolsFavourite .ClearFavouriteButton:hover {
+  transition: 0.5s;
+  opacity: 0.9;
+}
+
 .FavouriteCharacters .FavouriteHero {
   color: white;
   width: 15%;
@@ -1490,6 +1508,16 @@ li {
   height: 500px;
   border-radius: 13px;
   padding-top: 30px;
+  animation: emptyFav;
+}
+
+@keyframes emptyFav {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .EmptyFavourite h4 {
