--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -979,8 +979,86 @@ li {
   height: 400px;
 }
 
-.Authentication {
-  color: white;
+.WrapperRegestration .Authentication {
+  width: 40%;
+  background-color: #1d1e1f;
+  margin:  0 auto;
+  height: 400px;
+  border-radius: 13px;
+  padding-top: 20px;
+  animation: auth 0.8s linear;
+}
+
+@keyframes auth {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.WrapperRegestration .Authentication .RegPart {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.WrapperRegestration .Authentication .RegPart input {
+  width: 60%;
+  padding-left: 20px;
+  background-color: white;
+  border: none;
+  border-radius: 3px;
+  height: 40px;
+  font-size: 16px;
+}
+
+.WrapperRegestration .Authentication .RegPart span {
+  color: red;
+}
+
+.WrapperRegestration .Authentication .RegPart input:focus {
+  outline: none;
+  outline-offset: none;
+}
+
+.WrapperRegestration .Authentication .RegPart button {
+  width: 50%;
+  background-color: #484848;
+  transition: background-color .3s ease;
+  color: #f4f5f5;
+  font-size: 16px;
+  border: none;
+  height: 40px;
+  cursor: pointer;
+}
+
+.WrapperRegestration .Authentication .RegPart button:hover {
+  transition: 0.5s;
+  opacity: 0.8;
+}
+
+.WrapperRegestration .Authentication .RegPart .GoToSignInButton {
+  width: 30%;
+  height: 30px;
+  background-color: #fade4b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+}
+
+.WrapperRegestration .Authentication .RegPart .GoToSignInButton:hover {
+  transition: 0.5s;
+  opacity: 0.8;
+}
+
+.WrapperRegestration {
+  padding-top: 100px;
 }
 
 .Header .Container {
@@ -1058,6 +1136,16 @@ li {
   background-color: #181818;
   transform: translate(0, 10%);
   border-radius: 13px;
+  animation: login 0.8s linear;
+}
+
+@keyframes login {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .Login .LoginImages {
@@ -1079,6 +1167,10 @@ li {
   flex-direction: column;
   justify-content: space-evenly;
   height: 260px;
+}
+
+.Login .LoginTools span {
+  color: red;
 }
 
 .Login .LoginTools input {
