--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -186,7 +186,7 @@ li {
   width: 80%;
   height: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-flow: wrap;
   animation: characters 0.8s linear;
 }
