--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -1544,7 +1544,7 @@ li {
   width: 77%;
   color: white;
   margin: 0 auto;
-  padding-top: 150px;
+  padding-top: 30px;
   animation: currentPost 0.8s linear;
 }
 
@@ -1780,6 +1780,10 @@ li {
 
   .CopyRight a {
     font-size: 9px;
+  }
+
+  .ReturnToNewsPage {
+    width: 25%;
   }
 }
 
@@ -2391,6 +2395,10 @@ li {
 
   .FilteringByFilm {
     padding-top: 30px;
+  }
+
+  .Films .Film {
+    padding-top: 0px;
   }
 
   .Films .Film .InformationFilms {
