--- a/star-wars-temple/src/App.css
+++ b/star-wars-temple/src/App.css
@@ -554,6 +554,16 @@ li {
   margin-right: 20px;
   padding-top: 10px;
   cursor: pointer;
+  animation: film 0.8s linear;
+}
+
+@keyframes film {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .Films .Film:hover {
@@ -1507,6 +1517,16 @@ li {
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
+  animation: title 0.8s linear;
+}
+
+@keyframes title {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .News .NewsFilter .NewsTitle:hover {
@@ -1514,6 +1534,10 @@ li {
   color: white;
 }
 
+
+.News .NewsFilter .ContentNewsPoster {
+  width: 100%;
+}
 
 
 .News .NewsFilter .ClosedFilterNews {
@@ -1803,7 +1827,7 @@ li {
 
   .Container .DataBank .FilterDataBank {
     width: 23%;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
   }
 
   .Container .DataBank .Characters {
